Disqus, Gravatar, Favicon, Logo

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -18,7 +18,7 @@
       {% assign len = site.author.contact | size %}
       {% assign current_index = 0 %}
       <div class="sidebar-personal-info-section">
-        <p> Follow me: 
+        <p> Follow me:
         {% for contact in site.author.contact %}
         {% assign iconname = contact[0] %}
         {% if contact[0] == 'email' %}
@@ -78,7 +78,7 @@
 
   <div class="sidebar-item">
     <p>
-    Powered by <a href="http://jekyllrb.com">jekyll</a> and <a href="http://codinfox.github.io">codinfox-lanyon</a>
+    Powered by <a href="http://jekyllrb.com">jekyll</a> and <a href="http://agramar.github.io">Agramar</a>
     </p>
   </div>
 </div>
